@@ -25,9 +25,3 @@ DOCS=(README)
 python_install_all() {
 	python-distutils-ng_redoscript "/usr/bin/${PN}"
 }
-
-src_install() {
-	default
-
-	python-distutils-ng_src_install
-}
